feat: print author name in `<>`

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ IRC_NICKNAME="deez_bridge"
 IRC_CHANNEL="#dev"
 
 DISCORD_BOT_TOKEN="********************"
+DISCORD_BOT_GUILD_ID="*******************"
 DISCORD_BOT_CHANNEL_ID="69420"
