feat: logging & a bit of edge cases handling

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ IRC_CHANNEL="#dev"
 DISCORD_BOT_TOKEN="********************"
 DISCORD_BOT_GUILD_ID="*******************"
 DISCORD_BOT_CHANNEL_ID="69420"
+
+ENV=prod
